--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>Vlad Smirnov CV</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
